# chat-wgpu

./: .gitignore  Cargo.toml  PROFILING.md  README.md  ROADMAP.md
.cargo/: config.toml
examples/: bench.rs  generate.rs  q4bench.rs  q4probe.rs  q4trace.rs
examples/bench/: Cargo.toml  README.md
examples/bench/src/: lib.rs  main.rs
examples/bench/web/: index.html
examples/frontends/: README.md
examples/frontends/vanilla/: README.md  app.js  index.html  package.json  server.ts  worker.js
examples/metal-probe/: Cargo.toml
examples/metal-probe/src/: main.rs
src/: arch.rs  context.rs  lib.rs  main.rs  profile.rs  wasm.rs
src/families/: gemma.rs  llama.rs  mod.rs  qwen2.rs  qwen3.rs
src/kernels/: activation.rs  activation.wgsl  argmax.rs  argmax.wgsl  attention.rs  attention.wgsl  ewise.wgsl  glu.wgsl  matmul.rs  matmul.wgsl  mlp_mega.rs  mlp_mega.wgsl  mod.rs  norm.rs  norm.wgsl  q4.rs  q4.wgsl  rmsnorm.wgsl  rope.rs  rope.wgsl  swiglu.wgsl
src/loader/: dequant.rs  gguf.rs  mod.rs  safetensors.rs
src/model/: cache.rs  layers.rs  mod.rs  qwen3.rs
