[package]
name = "chat-wgpu"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Clean-room WebGPU (WGSL) LLM inference for the browser. Hand-rolled kernels, GGUF weights, no candle. Native + wasm."

[lib]
name = "chat_wgpu"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Kernel-correctness harness: GPU known-answer checks + a Qwen3 forward + loader
# round-trip tests. Native only. Run: `cargo run --bin verify`.
[[bin]]
name = "verify"
path = "src/main.rs"

# Native end-to-end: load a real GGUF + tokenizer and generate text. Run:
# `cargo run --release --example generate -- <gguf> <tok> "prompt" 64 --quantize`
[[example]]
name = "generate"

# Kernel microbenchmark (µs / GB·s per kernel, no model). Run:
# `cargo run --release --example bench`. Explicit path so it never collides with
# the legacy `examples/bench/` spike crate.
[[example]]
name = "bench"
path = "examples/bench.rs"

[dependencies]
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
futures = "0.3"
# JSON: safetensors headers and config.json. (GGUF is binary — no JSON there.)
serde_json = "1"

# Tokenizer (HF) — the only non-kernel dependency; wasm-capable.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = "0.22"
# block_on for the native bin/examples (async GPU readback). Native only; tiny.
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
