[package]
name = "chat-wgpu-bench"
version = "0.0.0"
edition = "2021"
description = "WebGPU matmul benchmark (GFLOP/s, GPU vs CPU) — native + browser."

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[profile.release]
opt-level = 3
